# mkxp-win32

./: CMakeLists.txt  Win32API.kdev4  lib.cpp  test.rb  win32.h  win32.rb  wintypes.h
advapi32/: CMakeLists.txt  advapi32.cpp  advapi32.h
common/: CMakeLists.txt  log.h  utils.cpp  utils.h  visibility.h
common/buffer/: CMakeLists.txt
common/buffer/include/buffer/: buffer.hpp  buffer_span.hpp  buffer_view.hpp  small_buffer.hpp  static_buffer.hpp  std_conversions.hpp
common/buffer/include/buffer/conversion/: array_conversion.hpp  c_array_conversion.hpp  string_conversion.hpp  string_view_conversion.hpp  vector_conversion.hpp
common/buffer/include/buffer/private/: aliasing_helpers.hpp  buffer_base.hpp  char_helpers.hpp  conversion_helpers.hpp  span_def.hpp  span_fwd.hpp
common/unicode/: CMakeLists.txt
common/unicode/include/: unicode.hpp  unicodeformat.hpp  unicodestring.hpp
common/unicode/include/private/: api.hpp
common/unicode/src/: unicode.cpp  unicodestring.cpp
extra/camouse/: CMakeLists.txt  camouse.cpp  camouse.hpp
extra/tktk_bitmap/: CMakeLists.txt
extra/wfcrypt/: CMakeLists.txt  rijndael.cpp  rijndael.hpp  wfcrypt.cpp  wfcrypt.h
gdi32/: CMakeLists.txt  gdi32.cpp  gdi32.h
gdiplus/: CMakeLists.txt  gdiplus.cpp  gdiplus.h
kernel32/: CMakeLists.txt  iniconfig.cpp  iniconfig.h  kernel32.cpp  kernel32.h
rgssad/: CMakeLists.txt  rgssad.cpp  rgssad.hpp
rpcrt4/: CMakeLists.txt  rpcrt4.cpp  rpcrt4.h
user32/: CMakeLists.txt  mkxpGlue.cpp  mkxpGlue.h  user32.cpp  user32.h  user32_dc.cpp  vkcodes.cpp  vkcodes.h  x11utils.cpp  x11utils.h
